Prevent jump when page load

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -21,6 +21,7 @@ body
   color $gray-dark
   font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,Cantarell, 'Helvetica Neue', sans-serif  
   overflow-x hidden
+  visibility visible
  
 img 
   max-width 100%
